Test commit via terminal.

--- a/Popcat/index.html
+++ b/Popcat/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <img src="popcat.png" width="10%">
-        <h1>Hi, My name is Popcat</h1>
+        <h1>Hi, My name is Popcat!</h1>
         <h2>Fun facts about me</h2>
         <ul>
             <li>I am a cat</li>
