--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
             <li>It exists</li>
         <input type="text" placeholder="Enter something">
         <button>Search</button>
+        <img src="https://cff2.earth.com/uploads/2024/09/06095734/Mars-water-loss.jpg" width="100%">
         </div>
     </body>
 </Html>
