--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
             <link rel="stylesheet" href="google.css">
         </head>
         <body>
-            <img src="https://play-lh.googleusercontent.com/1-hPxafOxdYpYZEOKzNIkSP43HXCNftVJVttoo4ucl7rsMASXW3Xr6GlXURCubE1tA=w3840-h2160-rw" />
-            <input type="text">
+            <div class="main">
+                <img class="logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/800px-Google_2015_logo.svg.png" />
+                <input class="Search" type="text">
+                <div class="button">
+                    <button> Google Search</button>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+            </div>
         </body>
     </html>
