--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
             <div class="main">
                 <img class="logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/800px-Google_2015_logo.svg.png" />
                 <input class="Search" type="text">
-                <button class="btn">Google Search</button>
+                <div class="btn-wrapper">
+                    <button class="btn">Google Search</button>
+                    <button class="btn"> I'm Feeling Lucky</button>
+                </div>    
             </div>
         </body>
     </html>
