--- a/Popcat/index.html
+++ b/Popcat/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="popcat.css">
     </head>
     <body>
-        <img src="popcat.png" width="10%">
-        <h1>Hi, My name is Popcat!</h1>
-        <h2>Fun facts about me</h2>
-        <ul>
-            <li>I am a cat</li>
-            <li>I like Minecraft</li>
-            <li>I exist</li>
-        </ul>
-        <p>Watch me on Youtube <a href="https://www.youtube.com/shorts/-oblY5fr7ko" target="_blank">here.</a></p>
-        <input type="text" placeholder="Enter email">
-            <button>Sign up for the Newsletter!</button>
+        <div class="card">
+            <div>
+                <img 
+                class="popcat" 
+                src="https://tndvjd.github.io/pop-cat/images/normal.png" 
+                alt="popcat existing and smiling">
+            </div>
+            <div>
+                <h3>Popcat</h3>
+                <p>A cat</p>
+                <h4>Minecraft player</h4>
+            </div>
     </body>
 </html>
