Fixed border in popcat card

--- a/Popcat/index.html
+++ b/Popcat/index.html
@@ -4,14 +4,14 @@
         <link rel="stylesheet" href="popcat.css">
     </head>
     <body>
-        <div class="card">
-            <div>
+        <div class="card border">
+            <div class="border">
                 <img 
                 class="popcat" 
                 src="https://tndvjd.github.io/pop-cat/images/normal.png" 
                 alt="popcat existing and smiling">
             </div>
-            <div>
+            <div class="border">
                 <h3>Popcat</h3>
                 <p>A cat</p>
                 <h4>Minecraft player</h4>
