Continued making Popcat card

--- a/Popcat/index.html
+++ b/Popcat/index.html
@@ -4,17 +4,17 @@
         <link rel="stylesheet" href="popcat.css">
     </head>
     <body>
-        <div class="card border">
-            <div class="border">
+        <div class="card">
+            <div>
                 <img 
                 class="popcat" 
                 src="https://tndvjd.github.io/pop-cat/images/normal.png" 
                 alt="popcat existing and smiling">
             </div>
-            <div class="border">
-                <h3>Popcat</h3>
+            <div>
+                <h3>Popcat In Helicopter</h3>
                 <p>A cat</p>
-                <h4>Minecraft player</h4>
-            </div>
+                <h4>Youtuber</h4>
+            </div>    
     </body>
 </html>
