--- a/space.html
+++ b/space.html
@@ -6,7 +6,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Join the exploration</h1>
-        <button class="btn">Apply</button>
+        <div id="hero">
+            <img 
+            id="main-logo"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/SpaceX-Logo.svg/2560px-SpaceX-Logo.svg.png" 
+            alt="SpaceX Logo ">
+            <h1>Join the <span class="underline">exploration</span></h1>
+            <button class="btn">Apply</button>
+            <button class="btn">FAQs</button>
+        </div>
+        <h3>Terms and conditions apply.</h3>
     </body>
 </html>
