--- a/podarok.html
+++ b/podarok.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="gift.css">
+        <link rel="stylesheet" href="podarok.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
